added api-key authentication
